--- a/public/css/sass/main/_vendor.scss
+++ b/public/css/sass/main/_vendor.scss
@@ -2,7 +2,7 @@
 	overflow-x: auto;
 	overflow-y: hidden;
 	position: relative;
-	margin: 3em 0;
+	margin: 0 0;
 	width: 100%;
 }
 
